import type { LoginFormSchema } from "./types";
import type { SubmitHandler } from "react-hook-form";

import { useCallback } from "react";

import { Spacer } from "tamagui";
import { useLingui, Trans } from "@lingui/react/macro";

import { useBooleanState } from "@ksairi-org/react-hooks";
import { useLayoutAnimationOnChange } from "@ksairi-org/react-native-hooks";
import { useUserStore } from "@stores";
import { useLoginWithPersistence } from "@ksairi-org/react-auth-core";
import { createHandledFormElement, Form } from "@ksairi-org/react-form";
import { BaseTouchable } from "@ksairi-org/ui-touchables";
import { BaseTextInput, CTAButton } from "@molecules";
import { loginSchema } from "@constants";
import { BodyRegularSm, LabelSemiboldLg } from "@fonts";
import { useGetFormMethods } from "@hooks";
import { showAlert } from "@utils";
import { useRouter } from "expo-router";

const FormInput = createHandledFormElement<
  typeof BaseTextInput,
  LoginFormSchema
>(BaseTextInput);

/**
 * @returns Form
 */
const LoginForm = () => {
  const { t } = useLingui();
  const {
    state: isSecureTextEntryEnabled,
    toggleState: toggleSecureTextEntryEnabled,
  } = useBooleanState(true);
  const router = useRouter();
  const { handleLogInWithEmail, status } = useLoginWithPersistence();
  const hasSeenWelcomeScreen = useUserStore(
    (state) => state.hasSeenWelcomeScreen,
  );

  const methods = useGetFormMethods<LoginFormSchema>(
    {
      email: "",
      password: "",
    },
    loginSchema,
  );

  useLayoutAnimationOnChange(status);

  const handleSubmit: SubmitHandler<LoginFormSchema> = useCallback(
    async (data) => {
      try {
        await handleLogInWithEmail({
          email: data.email,
          password: data.password,
        });
        if (!hasSeenWelcomeScreen) {
          router.navigate("/welcome");
        } else {
          router.navigate("/(app)/profile");
        }
      } catch (e) {
        showAlert({
          title: e.message,
          preset: "error",
        });
        console.log(e);
      }
    },
    [handleLogInWithEmail, hasSeenWelcomeScreen, router],
  );

  const {
    formState: { isValid },
  } = methods;
  return (
    <>
      <Form methods={methods}>
        <FormInput
          autoCapitalize={"none"}
          placeholder={t`Email`}
          name={"email"}
          fontSize={"$2"}
          keyboardType={"email-address"}
          textContentType={"emailAddress"}
          autoFocus={true}
        />
        <Spacer size={"$md"} />
        <FormInput
          secureTextEntry={isSecureTextEntryEnabled}
          textContentType={"password"}
          name={"password"}
          placeholder={t`Password`}
          fontSize={"$2"}
          returnKeyType={"done"}
          rightIconProps={{
            iconName: isSecureTextEntryEnabled ? "iconEye" : "iconEyeSlash",
            width: 16,
            height: 16,
            color: "$text-subtle",
            onPress: toggleSecureTextEntryEnabled,
          }}
          onSubmitEditing={methods.handleSubmit(handleSubmit)}
        />
      </Form>
      <Spacer size={"$button-lg"} />
      <BaseTouchable>
        <BodyRegularSm
          color={"$text-body"}
          onPress={() => router.navigate("/reset-password")}
        >
          <Trans>Forgot Password?</Trans>
        </BodyRegularSm>
      </BaseTouchable>
      <Spacer size={"$3xl"} />
      <CTAButton
        onPress={methods.handleSubmit(handleSubmit)}
        disabled={!isValid}
        loading={status === "loading"}
      >
        <LabelSemiboldLg textAlign={"center"} color={"$text-action-inverse"}>
          <Trans>Login</Trans>
        </LabelSemiboldLg>
      </CTAButton>
    </>
  );
};

export { LoginForm };
