...
          onChangeText={(text) => setText(text)}
        />

        <Spacer size={"$md"} />

        <CTAButton loading={isPending} onPress={handleOnPressSend}>
          <BodyBoldLg color={"$text-subtle"}><Trans>Send</Trans></BodyBoldLg>
        </CTAButton>

        {isError && errorMessage ? (
          <>
            <Spacer size={"$sm"} />
            <BodyBoldSm><Trans>Error:</Trans></BodyBoldSm>
...
